# scout

./: .gitignore  README.md  pyproject.toml
examples/: data.csv  main.py
src/scout/: __init__.py  _app.py  _home.py  _layout.py  _source.py  icons.py  utils.py
src/scout/components/: __init__.py  _select_grid.py  _select_rect.py  select_grid.py
src/scout/views/: __init__.py  filter.py  scatter.py  table.py
